crates/compiler/src/tests/e2e/good/0313_trait_describe_dyn_impl/main.gom
trait Describe {
    fn describe(Self) -> string;
}

struct Point {
    x: int32,
    y: int32,
}

impl Describe for Point {
    fn describe(self: Point) -> string {
        "(" + (self.x).to_string() + ", " + (self.y).to_string() + ")"
    }
}

fn print_desc(s: dyn Describe) {
    println(Describe::describe(s));
}

fn main() {
    let p = Point { x: 1, y: 2 };
    print_desc(p);
}
