crates/compiler/src/tests/e2e/bad/0575_dyn_unsafe_implicit_coercion/main.gom
trait Cloneish {
    fn clone(Self) -> Self;
}

struct A {
    x: int32,
}

impl Cloneish for A {
    fn clone(self: A) -> A {
        A { x: self.x }
    }
}

fn main() -> unit {
    let _a: dyn Cloneish = A { x: 1 };
    ()
}
